--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,13 @@ header .container .row .col-md-5 div:nth-child(2) p{
     border-radius: 5px;
     font-size: clamp(.8em, 2.5vw, 1rem);
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
+    .Vısıon_Section .container .row .VısıonCard{
+        transform: translate(-50%, 10%);
+    }
+    
+}
+@media screen and (max-width: 430px) {
     .Vısıon_Section .container .row .VısıonCard{
         transform: translate(-50%, 50%);
     }
